test/trivial/vass/val-fun-as-type-error-message.good
val-fun-as-type-error-message.chpl:2: error: cannot use a function as a type, unless it is an invocation of a type function
