test/trivial/vass/val-fun-as-type-error-message.chpl
def spooftype() { return 1; }
var x: spooftype;
